added qa module